Сделана модель пользователя + метод для создания пользователя
